--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,33 +4,33 @@ data:
   dataset: "SMAP"  # SMAP or MSL
   data_dir: "./data"
   channels:
+    - "D-1"    # Data handling sensor
     - "T-1"    # Temperature sensor
     - "P-1"    # Power/voltage
-    - "G-1"    # Gyroscope
-  window_size: 100
+  window_size: 50
   stride: 1
-  train_split: 0.8
+  train_split: 0.85
 
 model:
-  input_dim: 25       # Number of telemetry features
-  hidden_dim: 128
-  latent_dim: 64
+  input_dim: 25       # Auto-detected from data
+  hidden_dim: 64
+  latent_dim: 32
   num_layers: 2
-  dropout: 0.2
+  dropout: 0.1
   bidirectional: false
 
 training:
-  epochs: 100
-  batch_size: 64
+  epochs: 200
+  batch_size: 32
   learning_rate: 0.001
-  weight_decay: 0.0001
-  patience: 10         # Early stopping patience
+  weight_decay: 0.00001
+  patience: 20         # Early stopping patience
   scheduler: "cosine"  # cosine or step
 
 detection:
-  threshold_sigma: 3.0   # Number of std deviations for anomaly threshold
-  smoothing_window: 5    # Smooth reconstruction errors
-  min_anomaly_length: 3  # Minimum consecutive anomalous points
+  threshold_sigma: 2.5   # Number of std deviations for anomaly threshold
+  smoothing_window: 10   # Smooth reconstruction errors
+  min_anomaly_length: 5  # Minimum consecutive anomalous points
 
 output:
   model_dir: "./outputs/models"
